crates/bitnet-kernels/tests/snapshots/snapshot_wave23__generation_error_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 413
expression: errors
---
[
    InvalidConfig(
        "temperature must be > 0",
    ),
    EmptyPrompt,
    VocabTooSmall,
    NumericalError(
        "logits contain NaN",
    ),
    MaxTokensExceeded,
]
