crates/bitnet-kernels/tests/snapshots/snapshot_wave23__gqa_attention_type_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 19
expression: types
---
[
    Mha,
    Gqa,
    Mqa,
]
