crates/bitnet-kernels/tests/snapshots/snapshot_wave23__gqa_error_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 49
expression: errors
---
[
    ZeroDimension(
        "head_dim",
    ),
    UnevenGrouping {
        num_q_heads: 32,
        num_kv_heads: 5,
    },
    TooManyKvHeads {
        num_q_heads: 8,
        num_kv_heads: 16,
    },
    BufferMismatch {
        expected: 4096,
        actual: 2048,
    },
    SequenceTooLong {
        seq_len: 8192,
        max_seq_len: 4096,
    },
]
