crates/bitnet-kernels/tests/snapshots/snapshot_wave23__gqa_head_grouping.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 56
expression: grouping
---
HeadGrouping {
    mapping: [
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        1,
    ],
    group_size: 4,
}
